# dart_sqlite

./: .gitignore  CMakeLists.txt  README.md  run.sh
dart/: pubspec.yaml  test.db
dart/example/: sqlite.dart  statements.dart
dart/lib/: dart_sqlite.dart
dart/lib/src/: libsqlite.dylib  row.dart  sqlite.dart
example/: statements.dart
lib/: dart_sqlite.dart
lib/src/: errors.dart  libsqlite.dylib  native.dart  sqlite.dart  sqlite_statement.dart
native/: CMakeLists.txt
native/src/: dart.cpp  dart.h
src/: DartObjectInstantiator.cpp  DartObjectInstantiator.h  SqliteWrapper.cpp  SqliteWrapper.h  StatementPeer.h  dart.cpp  dart.h
test/: sqlite_test.dart
